classDiagram

%% Classes
class YggdrasilCore {
  -handlers : dict
  -watchers : list~AbstractWatcher~
  -running : bool
  +register_watcher(w: AbstractWatcher) : void
  +register_handler(event_type: str, func) : void
  +handle_event(event: YggdrasilEvent) : void
  +start() : void
  +stop() : void
}

class YggdrasilEvent {
  +event_type: str
  +payload: any
  +source: str
  +timestamp: datetime
}

class AbstractWatcher {
  -_running : bool
  -event_handler : callable
  +is_running : bool
  +start() : void
  +stop() : void
  +emit(event_type: str, payload: any, source: str) : void
}

class CouchDBWatcher {
  -poll_interval : int
  -db_manager : any
  +start() : void
  +stop() : void
}

class FileSystemWatcher {
  -directory_to_watch : str
  +start() : void
  +stop() : void
}

class Realm {
  +proceed : bool
  +launch() : void
  +launch_template() : void
}

%% Relationships
AbstractWatcher <|-- CouchDBWatcher
AbstractWatcher <|-- FileSystemWatcher
YggdrasilCore --> YggdrasilEvent : uses
YggdrasilCore "1" --> "*" AbstractWatcher : manages
Realm <.. YggdrasilCore : loaded by
